--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -21,6 +21,6 @@ layout: default
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 class="page__title">{{ page.title }}</h1>
     {% endunless %}
-    {{ iojefo&"ijfo&"i'j }}
+    {{ content }}
   </div>
 </div>
