--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,6 +8,6 @@ layout: archive
   {% include archive-single.html %}
 {% endfor %}
 
-ihbmibuobmhùou
+I am a 3rd year student at Ecole Polytechnique, France’s leading school of science and engineering. This year, I major in Applied Mathematics, focusing mainly on statistics and probability, optimization, data science (ML and DL) as well as financial engineering. This website gathers all the project in which I participated throughout my studies at Ecole Polytechnique.
 
 {% include paginator.html %}
