--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,7 @@ layout: archive
 {% endfor %}
 
 
-I am a penultimate year Master student at Ecole Polytechnique, France’s leading school of science and engineering. This year, I major in Applied Mathematics, focusing mainly on statistics and probability, optimization, data science (ML and DL) as well as financial engineering. This website gathers all the project in which I participated throughout my studies at Ecole Polytechnique.  
+I am third year Master student at Ecole Polytechnique, France’s leading school of science and engineering. This year, I major in Applied Mathematics, focusing mainly on machine & deep learning, statistics and probability theory.
+Some of my projects are presented in this website.
 
 {% include paginator.html %}
