--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,6 @@ layout: archive
 
 
 I am third year Master student at Ecole Polytechnique, France’s leading school of science and engineering. This year, I major in Applied Mathematics, focusing mainly on machine & deep learning, statistics and probability theory.
-Some of my projects are presented in this website.
+My main projects are presented in this website.
 
 {% include paginator.html %}
