--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: archive
 {% endfor %}
 
 
-I am third year Master student at Ecole Polytechnique, France’s leading school of science and engineering. This year, I major in Applied Mathematics, focusing mainly on machine & deep learning, statistics and probability theory.
+I am a third year Master student at Ecole Polytechnique, France’s leading school of science and engineering. This year, I major in Applied Mathematics, focusing mainly on machine & deep learning, statistics and probability theory.
 My main projects are presented in this website.
 
 {% include paginator.html %}
